--- a/src/calendar/calendar-section.css
+++ b/src/calendar/calendar-section.css
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  padding: 0 0 8px;
+  padding: 0 0 4px;
 }
 .calendar-nav-button {
   background: none;
